[package]
name = "my_advent_of_code"
version = "0.1.0"
authors = ["Kent Delante <kdeleteme@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "my_advent_of_code"

[[bin]]
name = "day_one"
path = "src/day_one/day_one.rs"

[[bin]]
name = "day_two"
path = "src/day_two/day_two.rs"

[[bin]]
name = "day_three"
path = "src/day_three/day_three.rs"

[[bin]]
name = "day_four"
path = "src/day_four/day_four.rs"

[[bin]]
name = "day_five"
path = "src/day_five/day_five.rs"